Fix nav list display when on smaller screens and signed in.

--- a/kitsune/sumo/static/sumo/less/main.less
+++ b/kitsune/sumo/static/sumo/less/main.less
@@ -1273,7 +1273,6 @@ input[type=button],
   font-size: 16px;
   font-weight: 700;
   position: relative;
-  width: 40%;
   z-index: 10;
 
   > ul {
@@ -1403,6 +1402,14 @@ input[type=button],
         }
       }
     }
+  }
+
+  .logged-in {
+    width: 60%;
+  }
+
+  .logged-out {
+    width: 40%;
   }
 
   .unread-message-count {
